--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
----
 name: "release"
 
 on:
@@ -21,7 +20,25 @@ jobs:
           - target: x86_64-apple-darwin
             archive: zip
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
+
+      # Set up Rust toolchain and target for each platform
+      - name: Set up Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
+
+      # Install additional dependencies for MUSL cross-compilation on Linux
+      - name: Install dependencies for x86_64-unknown-linux-musl
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install musl-tools -y
+
+      # Compile and release
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
         env:
@@ -29,3 +46,4 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+
