--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
-name: "release"
+---
+name: "pre-release"
 
 on:
   push:
@@ -6,61 +7,22 @@ on:
       - "master"
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz
-          - target: x86_64-apple-darwin
-            archive: zip
+  pre-release:
+    name: "Pre Release"
+    runs-on: "ubuntu-latest"
+
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
-
-      # Install dependencies for x86_64-unknown-linux-musl, if applicable
-      - name: Install dependencies
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+      # ...
+      - name: "Build & test"
         run: |
-          sudo apt-get update
-          sudo apt-get install musl-tools -y
+          echo "done!"
 
-      - name: Compile the code
-        run: |
-          cargo build --release --target ${{ matrix.target }}
-
-      # Create a release if it doesn’t exist
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          tag_name: "v1.0.0"  # Adjust as needed
-          release_name: "Release v1.0.0"
-          draft: false
-          prerelease: false
-
-      # Upload the compiled artifact
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "target/${{ matrix.target }}/release/gr"  # Path to your compiled binary
-          asset_name: "gr-${{ matrix.target }}.${{ matrix.archive }}"  # Name of the uploaded artifact
-          asset_content_type: application/octet-stream
-
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            LICENSE.txt
+            *.jar
