--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+
 on:
   push:
     branches:
@@ -14,6 +15,7 @@ jobs:
         id: compile
         uses: rust-build/rust-build.action@v1.4.5
         with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           RUSTTARGET: x86_64-unknown-linux-musl
           UPLOAD_MODE: none
 
@@ -21,7 +23,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Authentication token
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           tag_name: v1.0.0  # Set the release tag here
           release_name: 'v1.0.0 Release'  # Set the release name
           body: 'Release notes for v1.0.0'  # Optional release notes
@@ -31,6 +33,7 @@ jobs:
       - name: Upload artifact to release
         uses: actions/upload-release-asset@v1
         with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.compile.outputs.BUILT_ARCHIVE }}
           asset_name: binary.tar.gz  # Adjust the name according to your build artifact
@@ -39,10 +42,12 @@ jobs:
       - name: Upload checksum to release
         uses: actions/upload-release-asset@v1
         with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.compile.outputs.BUILT_CHECKSUM }}
           asset_name: binary.tar.gz.sha256  # Adjust the name accordingly
           asset_content_type: application/text  # Adjust the content type based on your checksum file
+
 
 
 # on:
