--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@master
 
@@ -26,13 +26,16 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.3
-          release_name: 'v1.0.3 Release'
-          body: 'Release notes for v1.0.3'
+          tag_name: v1.0.4
+          release_name: 'v1.0.4 Release'
+          body: 'Release notes for v1.0.4'
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set upload URL as output
+        run: echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_OUTPUT
 
       - name: Upload artifact to release
         uses: actions/upload-release-asset@v1
@@ -53,6 +56,7 @@ jobs:
           asset_content_type: application/text
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 # on:
 #   push:
 #     branches:
