--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,9 @@ on:
     branches:
       - "master"
 
-permissions:
-  contents: write
-  id-token: write
+# permissions:
+#   contents: write
+#   id-token: write
 
 jobs:
   build:
@@ -26,9 +26,9 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.4
-          release_name: 'v1.0.4 Release'
-          body: 'Release notes for v1.0.4'
+          tag_name: v1.0.5
+          release_name: 'v1.0.5 Release'
+          body: 'Release notes for v1.0.5'
           draft: false
           prerelease: false
         env:
