--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,9 @@ on:
     branches:
       - "master"
 
-# permissions:
-#   contents: write
-#   id-token: write
+permissions:
+  contents: write
+  id-token: write
 
 jobs:
   build:
