--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
     branches: [ "master" ]
 
+permissions:
+  contents: write
+
 env:
   CARGO_TERM_COLOR: always
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
@@ -18,7 +22,7 @@ jobs:
         toolchain:
           - stable
           - beta
-          - nightly
+          # - nightly
 
     steps:
     - uses: actions/checkout@v4
@@ -27,3 +31,42 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+  release:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        toolchain: [stable]
+        include:
+          - os: ubuntu-latest
+            rust: stable
+            target: x86_64-unknown-linux-musl
+            bin: rid
+            name: rid-linux-x86_64.tar.gz
+
+    runs-on: ${{ matrix.os }}
+    steps:
+    - name: Install ${{ matrix.toolchain }}
+      uses: dtolnay/rust-toolchain@master
+      with:
+      toolchain: ${{ matrix.toolchain }}
+    - name: Configure Rustup
+      run: rustup target add ${{ matrix.target }}
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Build
+      run: cargo build --release --features vers --target ${{ matrix.target }}
+    - name: Package
+      shell: bash
+      run: |
+      strip target/${{ matrix.target }}/release/${{ matrix.bin }}
+      cd target/${{ matrix.target }}/release
+      tar czvf ../../../${{ matrix.name }} ${{ matrix.bin }}
+      cd -
+    - name: Publish
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+      files: 'rid*'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
