--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,15 @@ clap = { version = "4.5.20", features = ["derive"] }
 dirs = "5.0.1"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
+
+[profile.release]
+# less code to include into binary
+panic = 'abort'
+# optimization over all codebase ( better optimization, slower build )
+codegen-units = 1
+# optimization for size ( more aggressive )
+opt-level = 'z'
+# optimization for size
+# opt-level = 's'
+# link time optimization using using whole-program analysis
+lto = true
