--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         toolchain:
           - stable
-          - beta
+          # - beta
           # - nightly
 
     steps:
