--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ description = "rm"
 chrono = "0.4.38"
 clap = { version = "4.5.20", features = ["derive"] }
 dirs = "5.0.1"
+env_logger = "0.11.5"
+log = "0.4.22"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
