--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,9 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.6
-          release_name: 'v1.0.6 Release'
-          body: 'Release notes for v1.0.6'
+          tag_name: v0.1.1
+          release_name: 'v0.1.1 Release'
+          body: 'Release notes for v0.1.1'
           draft: false
           prerelease: false
         env:
@@ -42,7 +42,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.compile.outputs.BUILT_ARCHIVE }}
-          asset_name: gr.tar.gz
+          asset_name: rid.tar.gz
           asset_content_type: application/gzip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -52,7 +52,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.compile.outputs.BUILT_CHECKSUM }}
-          asset_name: gr.tar.gz.sha256
+          asset_name: rid.tar.gz.sha256
           asset_content_type: application/text
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
