--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ permissions:
   contents: write
   id-token: write
 
+env:
+  CARGO_TERM_COLOR: always
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     name: Build
@@ -24,7 +28,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: actions/upload-release-asset@v1
         with:
           tag_name: v0.1.1
           release_name: 'v0.1.1 Release'
@@ -66,6 +70,10 @@ jobs:
 #   contents: write
 #   id-token: write
 #
+# env:
+#   CARGO_TERM_COLOR: always
+#   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
 # jobs:
 #   build:
 #     name: Build
@@ -83,32 +91,37 @@ jobs:
 #
 #       - name: Create Release
 #         id: create_release
-#         uses: actions/create-release@v1
+#         uses: actions/upload-release-asset@v1
+#         with:
+#           tag_name: v0.1.1
+#           release_name: 'v0.1.1 Release'
+#           body: 'Release notes for v0.1.1'
+#           draft: false
+#           prerelease: false
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           tag_name: v1.0.2  # Set the release tag here
-#           release_name: 'v1.0.2 Release'  # Set the release name
-#           body: 'Release notes for v1.0.2'  # Optional release notes
-#           draft: false  # Set to true if you want the release to be a draft
-#           prerelease: false  # Set to true if this is a pre-release
+#
+#       - name: Set upload URL as output
+#         run: echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_OUTPUT
 #
 #       - name: Upload artifact to release
 #         uses: actions/upload-release-asset@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #         with:
 #           upload_url: ${{ steps.create_release.outputs.upload_url }}
 #           asset_path: ${{ steps.compile.outputs.BUILT_ARCHIVE }}
-#           asset_name: gr.tar.gz 
+#           asset_name: rid.tar.gz
 #           asset_content_type: application/gzip
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #
 #       - name: Upload checksum to release
 #         uses: actions/upload-release-asset@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #         with:
 #           upload_url: ${{ steps.create_release.outputs.upload_url }}
 #           asset_path: ${{ steps.compile.outputs.BUILT_CHECKSUM }}
-#           asset_name: gr.tar.gz.sha256
+#           asset_name: rid.tar.gz.sha256
 #           asset_content_type: application/text
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+
