--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,29 +2,70 @@ name: Cargo Build & Test
 
 on:
   push:
-  pull_request:
+    branches:
+      - master
 
 env: 
   CARGO_TERM_COLOR: always
 
 jobs:
-  build_and_test:
-    name: Rust project - latest
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
-          - beta
-          - nightly
+  release:
+    name: Build and Release
+    run-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: |
-          # python -m pip install --upgrade pip
-          sudo apt install vim
-      - uses: actions/checkout@v4
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - run: cargo build --verbose
-      - run: cargo test --verbose
-  
-
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build project
+        run: cargo build --release --locked
+      - name: Bump version and push tag/create release point
+        uses: anothrNick/github-tag-action@1.17.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+        id: bump_version
+      - name: Upload binary to release
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/alemanes
+          asset_name: alemanes-linux-amd64
+          tag: ${{ steps.bump_version.outputs.new_tag }}
+          overwrite: true
+  # build_and_test:
+  #   name: Rust project - latest
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       toolchain:
+  #         - stable
+  #         - beta
+  #         - nightly
+  #   steps:
+  #     - name: Install dependencies
+  #       run: |
+  #         # python -m pip install --upgrade pip
+  #         sudo apt install vim
+  #     - uses: actions/checkout@v4
+  #     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+  #     - run: cargo build --verbose
+  #     - run: cargo test --verbose
+  #
+# https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
+changelog:
+  exclude:
+    labels:
+      - ignore-for-release
+    authors:
+      - octocat
+  categories:
+    - title: Breaking Changes 🛠
+      labels:
+        - Semver-Major
+        - breaking-change
+    - title: Exciting New Features 🎉
+      labels:
+        - Semver-Minor
+        - enhancement
+    - title: Other Changes
+      labels:
+        - "*"
