--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,21 +49,21 @@ jobs:
   #     - run: cargo test --verbose
   #
 # https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
-changelog:
-  exclude:
-    labels:
-      - ignore-for-release
-    authors:
-      - octocat
-  categories:
-    - title: Breaking Changes 🛠
-      labels:
-        - Semver-Major
-        - breaking-change
-    - title: Exciting New Features 🎉
-      labels:
-        - Semver-Minor
-        - enhancement
-    - title: Other Changes
-      labels:
-        - "*"
+# changelog:
+#   exclude:
+#     labels:
+#       - ignore-for-release
+#     authors:
+#       - octocat
+#   categories:
+#     - title: Breaking Changes 🛠
+#       labels:
+#         - Semver-Major
+#         - breaking-change
+#     - title: Exciting New Features 🎉
+#       labels:
+#         - Semver-Minor
+#         - enhancement
+#     - title: Other Changes
+#       labels:
+#         - "*"
