--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,49 +7,33 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    name: Release - ${{ matrix.platform.release_for }}
+    strategy:
+      matrix:
+        platform:
+          - os_name: Linux-x86_64
+            os: ubuntu-20.04
+            target: x86_64-unknown-linux-musl
+
+          - os_name: macOS-x86_64
+            os: macOS-latest
+            target: x86_64-apple-darwin
+
+            # more release targets here ...
+
+    runs-on: ${{ matrix.platform.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: manoadamro/rust-release@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build executable
+        uses: houseabsolute/actions-rust-cross@v0
         with:
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.repository }}
-          token: ${{ secrets.GITHUB_TOKEN }}
- # build_and_test:
-  #   name: Rust project - latest
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       toolchain:
-  #         - stable
-  #         - beta
-  #         - nightly
-  #   steps:
-  #     - name: Install dependencies
-  #       run: |
-  #         # python -m pip install --upgrade pip
-  #         sudo apt install vim
-  #     - uses: actions/checkout@v4
-  #     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-  #     - run: cargo build --verbose
-  #     - run: cargo test --verbose
-  #
-# https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
-# changelog:
-#   exclude:
-#     labels:
-#       - ignore-for-release
-#     authors:
-#       - octocat
-#   categories:
-#     - title: Breaking Changes 🛠
-#       labels:
-#         - Semver-Major
-#         - breaking-change
-#     - title: Exciting New Features 🎉
-#       labels:
-#         - Semver-Minor
-#         - enhancement
-#     - title: Other Changes
-#       labels:
-#         - "*"
+          target: ${{ matrix.platform.target }}
+          args: "--locked --release"
+          strip: true
+      - name: Publish artifacts and release
+        uses: houseabsolute/actions-rust-release@v0
+        with:
+          executable-name: ubi
+          target: ${{ matrix.platform.target }}
+        if: matrix.toolchain == 'stable'
