--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,29 @@
-name: rust release action
+name: Release
+
+permissions:
+  contents: write
+
 on:
   push:
     tags:
-      - "v*"
+      - v[0-9]+.*
+
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+  create-release:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: test build rust project
-        uses: lxl66566/rust-simple-release@main
+      - uses: taiki-e/create-gh-release-action@v1
         with:
-          targets: aarch64-unknown-linux-gnu, aarch64-unknown-linux-musl, x86_64-pc-windows-msvc, x86_64-unknown-linux-musl, x86_64-unknown-linux-gnu, aarch64-apple-darwin, x86_64-apple-darwin
-          token: ${{ secrets.GH_TOKEN }}
+          # changelog: CHANGELOG.md
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-assets:
+    needs: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          bin: rid
+          token: ${{ secrets.GITHUB_TOKEN }}
