--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ dirs = "5.0.1"
 env_logger = "0.11.5"
 log = "0.4.22"
 
+[dev-dependencies]
+pretty_assertions = "1.4.1"
+
 [profile.release]
 panic = 'abort'
 codegen-units = 1
