--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,15 @@ jobs:
       
       - name: Display PWD
         run: echo "PWD is ${{ github.workspace }}"
+        run: ls
         
       - name: List files in PWD
         run: ls ${{ github.workspace }}
+        run: ls
       
       - run: mkdir -p ~/.local/share/Trash/files
       - run: cargo build --verbose
+        run: ls
       - run: cargo test --verbose
+        run: ls
   
