--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
       - run: mkdir -p ~/.local/share/Trash/files
       - run: cargo build --verbose
       - run: cargo test --verbose
+
+      - name: Display PWD after test
+        run: echo "PWD is ${{ github.workspace }}"
