--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
       
       - run: mkdir -p ~/.local/share/Trash/files
       - run: cargo build --verbose
+      - run: mkdir -p ~/.local/share/Trash/files
+      - run: ls ~/.local/share/Trash/files
       - run: cargo test -- --nocapture # --verbose
 
       - name: Display PWD after test
