--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
       - run: cargo build --verbose
       - run: mkdir -p ~/.local/share/Trash/files
       - run: ls ~/.local/share/Trash/files
-      - run: cargo test -- --nocapture # --verbose
+      - run: |
+          export RUST_BACKTRACE=1
+          cargo test -- --nocapture # --verbose
 
       - name: Display PWD after test
         run: ls ${{ github.workspace }}
