--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
       - run: mkdir -p ~/.local/share/Trash/files
       - run: cargo build --verbose
       - run: mkdir -p ~/.local/share/Trash/files
+      - run: mkdir -p ~/.local/share/rid
       - run: ls ~/.local/share/Trash/files
       - run: |
           export RUST_BACKTRACE=1
