--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - run: cargo build --verbose
       - run: mkdir -p ~/.local/share/Trash/files
       - run: mkdir -p ~/.local/share/rid
-      - run: touch -p ~/.local/share/rid/rid_history.log
+      - run: touch ~/.local/share/rid/rid_history.log
       - run: ls ~/.local/share/Trash/files
       - run: |
           export RUST_BACKTRACE=1
