--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.20", features = ["derive"] }
 dirs = "5.0.1"
 env_logger = "0.11.5"
 log = "0.4.22"
+walkdir = "2.5.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
